                  Idem with 'InstanceBrickConfigItem.generate_base_id()'.
                  The methods 'id_from_brick_id()' have been removed.
                     - "rtype_brick" => "rtype"
                     - "instanceblock" => "instance"
                     - "customblock" => "custom"
            - The field 'HeaderFilter.json_cells' is now a 'JSONField';
              you won't have to change your code if you use the property 'cells' as advised.
            - In 'EntityFilterCondition' :
                - The field 'name' contains now the UUID of 'CremePropertyType' & 'CustomField' when it's relevant.
                - The field 'raw_value' has been renamed "value" & is now a 'JSONField';
                  it'll only affect direct access to the field (e.g. QuerySet), because the property (getter/setter) "value" has just been replaced.
                  The JSON data should always be a dictionary, so the data changed for conditions on CremeProperties
                  (example: 'true' became '{"has":true}' ; see 'creme_core.core.entity_filter.condition_handler.PropertyConditionHandler').
                - In conditions related to 'Relation', the format of the stored JSOn has changed :
                  - The related 'ContentType' is now stored with the key "ct" (instead of "ct_id"), and the value is the natural-key (instead of the ID).
                  - The related 'CremeEntity' is now stored with the key "entity" (instead of "entity_id") and the value is the UUID (instead of the ID).
            - The method 'FieldsConfig._get_hidden_field_names()' has been replaced by the property "hidden_field_names".
            - The model 'reminder.DateReminder' has been removed.
        # In 'creme_core.forms' :
            - In 'entity_filter.fields' :
                - The attribute 'CustomFieldsConditionsField._non_hiddable_cfield_ids' has been replaced by "_non_hiddable_cfield_uuids".